fixed mobile strapline (now center)
added extra padding to bottom logo for mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /*
 Theme Name: AATC 
 Theme URI: https://wordpress.org/themes/twentyseventeen/
@@ -1544,6 +1543,7 @@ a:hover .nav-title,
 
 .js .menu-toggle {
 	display: block;
+
 }
 
 .main-navigation.toggled-on ul.nav-menu {
@@ -3502,6 +3502,23 @@ object {
 		padding-left: 0;
 	}
 }
+ 
+.nav-strapline  {
+	float: center;
+	text-indent:15px; 
+	max-width:800px;
+	font-size: 12px;
+	font-family:"Lucida Sans"; 
+	}
+	
+	.aatc-logo {
+	float: left ;
+	margin: 0px 5px;
+	padding-bottom: 1.8cm;
+	max-width:10px;
+	max-height:10px;
+	}
+
 
 @media screen and (min-width: 30em) {
 
@@ -3553,6 +3570,8 @@ object {
 		font-size: 0.875rem;
 	}
 
+
+		
 	/* Fix image alignment */
 	img.alignleft {
 		float: left;
@@ -3564,19 +3583,14 @@ object {
 		margin-left: 1.5em;
 	}
 
-	.nav-strapline {
-		display: none !important;
-	}
 	
-	.nav-strapline p {
-		display: none !important;
-	}
 	
 	/* Site Branding */
 
 	.site-branding {
 		padding: 3em 0;
 	}
+
 
 	/* Front Page */
 
